last update before final version

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://th.bing.com/th/id/R.3cb85e41659bc0f46ce5a37c36b72ba6?rik=OT%2bZYUfZZyQLqw&riu=http%3a%2f%2fjsunting.com%2fdata%2ffile%2f4010%2f1930813615_t3NGkbyo_cf01d56b960bfe45fcc6a380093344fdc7379e12.png&ehk=LgNvPMDf%2fzyz1XWq4zJQS2RbaYfnxHFMjPxt%2f9kA5l8%3d&risl=&pid=ImgRaw&r=0" style="height: 30; width: 70;" />
+  <link rel="icon" href="../src/componement/media/LOGO.ico" style="height: 30; width: 70;" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link href="https://fonts.googleapis.com/css2?family=Kenia&display=swap" rel="stylesheet">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="../src/componement/media/LOGO.png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
