--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="./ICONS.ico" style="height: 200; width: 200;" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="keywords" content="top-rated films , trending series , movie enthusiasts">
+  <meta name="description" content="Discover your next favorite movie or TV show with our user-friendly platform. Browse through top-rated films, trending series, and various genres like action, drama, comedy, and more. Whether you're looking for reviews, release dates, or trailers, we provide all the information you need to plan your next watch. Perfect for movie enthusiasts and binge-watchers alike!" />
   <link href="https://fonts.googleapis.com/css2?family=Kenia&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" href="./ICONS.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -28,15 +29,15 @@
   <link rel="manifest" href="./manifest.json" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MTF5X3482L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  gtag('config', 'G-MTF5X3482L');
+</script>
   <title>Cinema Browser && TvShow Guide</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
